--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -12,38 +12,63 @@
                   
         </div>
 
-        <div class="flex flex-col w-full">
-            <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-            <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-                <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+        
+        <div class="w-full shadow border-gray-200 sm:rounded-lg">
                 <table class="min-w-full divide-y divide-gray-200">          
                     <thead class="bg-gray-50">
                         <tr>
+                            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 tracking-wider">
+                            <i class="fas fa-tasks"></i>
+                            </th>
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider">
                             태그
                             </th>
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider">
                             내용
                             </th>
-                            <th></th>                                                                                                  
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider">
+                            완료 일자
+                            </th>
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider">
+                            등록 일자
+                            </th>
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider">
+                            수정 일자
+                            </th>
+                            <th></th>
                         </tr>
                     </thead>          
                     <tbody>
                         {% for board in boards %}
                             <tr class="bg-white">
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                    <a class="text-blue-500 hover:text-blue-800" href="#">{{ board.tag }}</a>
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                    <a class="text-blue-500 hover:text-blue-800" href="#">{{ board.get_content }}</a>
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 ">
-                                   {% if board.complete_yn %}
-                                   <i class="fas fa-check text-green-500"></i>
+                                <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">
+                                   {% if board.complete_yn %}            
+                                   <i class="fas fa-check-double text-green-500 hover:cursor-pointer"></i>
                                    {% else %}
-                                   <i class="fas fa-times text-red-500"></i>
+                                   <i class="fas fa-check opacity-30 hover:cursor-pointer"></i>                                   
                                    {% endif %} 
                                 </td>                                                                                                                                                      
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                                    <span>{{ board.tag }}</span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                                    <span class="hover:cursor-pointer">{{ board.get_content }}</span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                                    {% if board.complete_date %}
+                                        <span>{{ board.complete_date }}</span>
+                                    {% endif %}
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                                    <span>{{ board.created }}</span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                                    <span>{{ board.updated }}</span>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                                    <a href="{% url 'boards:delete-board' board.pk %}"><i class="fas fa-times text-red-500 hover:cursor-pointer"></i></a>
+                                </td>
+                                
                             </tr>
 
                         {% empty %}
@@ -55,26 +80,13 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                </div>
-            </div>
-            </div>
         </div>
+            
+        
 
-        {% if boards %}
-        <div class="flex justify-center w-full py-5">         
-            {% if page_obj.has_previous %}
-                <a href="?page={{page_obj.previous_page_number}}">
-                    <i class="fas fa-arrow-left fa-lg"></i>
-                </a>
-            {% endif %}
-            <span class="px-3" >Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
-            {% if page_obj.has_next %}
-                <a href="?page={{page_obj.next_page_number}}">
-                    <i class="fas fa-arrow-right fa-lg"></i>
-                </a>
-            {% endif %}
-        </div>
-        {% endif %}
+        
+        {% include 'pagination.html' with list=boards %}
+        
   
     </div>
 </div>
