--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="shortcut icon" href="#">
     {% tailwind_css %}
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
     {% block content %}{% endblock content %}
+    <script src="{% static 'js/main.js' %}" ></script>    
 </body>
 </html>
