--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -7,12 +7,9 @@
     <div class="container px-5 py-24 mx-auto flex flex-wrap">
         <div class="w-full mb-6 py-6 flex justify-between items-center border-gray-200">
             <div>
-                <h1 class="text-4xl text-gray-800">TO DO</h1>                
-            </div>            
-                  
+                <h1 class="text-4xl text-gray-800">TO DO</h1>
+            </div>
         </div>
-
-        
         <div class="w-full shadow border-gray-200 sm:rounded-lg">
                 <table class="min-w-full divide-y divide-gray-200">          
                     <thead class="bg-gray-50">
@@ -35,7 +32,7 @@
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 tracking-wider">
                             수정 일자
                             </th>
-                            <th></th>
+                            <th></th>                            
                         </tr>
                     </thead>          
                     <tbody>
@@ -48,11 +45,14 @@
                                    <i class="fas fa-check opacity-30 hover:cursor-pointer"></i>                                   
                                    {% endif %} 
                                 </td>                                                                                                                                                      
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                    <span>{{ board.tag }}</span>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">                                    
+                                    <input id="{{board.pk}}-tag" type="text" value="{{ board.tag }}" disabled />
+                                    <i id="{{board.pk}}-tag-icon" class="fas fa-edit text-blue-500 hover:cursor-pointer" onclick="editTag({{board.pk}})" ></i> 
+                                    <button id="{{board.pk}}-tag-btn" class="p-2 bg-blue-300 rounded-md hidden">제출</button>                                   
                                 </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                    <span class="hover:cursor-pointer">{{ board.get_content }}</span>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">                                    
+                                    <input id="{{board.pk}}-content" type="text" value="{{ board.get_content }}" disabled class="rounded outline-none" >
+                                    <i class="fas fa-edit text-blue-500 hover:cursor-pointer" onclick="editContent({{board.pk}})" ></i>                                    
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
                                     {% if board.complete_date %}
@@ -68,7 +68,6 @@
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
                                     <a href="{% url 'boards:delete-board' board.pk %}"><i class="fas fa-times text-red-500 hover:cursor-pointer"></i></a>
                                 </td>
-                                
                             </tr>
 
                         {% empty %}
