--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,10 @@
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
-    {% block content %}{% endblock content %}
-    <script src="{% static 'js/main.js' %}" ></script>    
+    {% block content %}{% endblock content %}        
+    <script src="{% static 'js/editTag.js' %}" ></script>    
+    <script src="{% static 'js/editContent.js' %}" ></script>    
+    <script src="{% static 'js/deleteBoard.js' %}" ></script>    
+    <script src="{% static 'js/toggle.js' %}" ></script>
 </body>
 </html>
