--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -10,6 +10,12 @@
                 <h1 class="text-4xl text-gray-800">TO DO</h1>
             </div>
         </div>
+
+
+        
+
+        <a href="{% url 'boards:create-board' %}" class="p-2 bg-blue-300 rounded-md hover:bg-blue-400">추가</a>
+
         <div class="w-full shadow border-gray-200 sm:rounded-lg">
                 <table class="min-w-full divide-y divide-gray-200">          
                     <thead class="bg-gray-50">
@@ -84,6 +90,7 @@
                                 </td>
                             </tr>                        
                         {% endfor %}
+                        
                     </tbody>
                 </table>
         </div>
