--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -7,14 +7,30 @@
     <div class="container px-5 py-24 mx-auto flex flex-wrap">
         <div class="w-full mb-6 py-6 flex justify-between items-center border-gray-200">
             <div>
-                <h1 class="text-4xl text-gray-800">TO DO</h1>
+                <a href="{% url 'boards:board-list' %}" class="text-4xl text-gray-800">TO DO</a>
             </div>
         </div>
 
 
         
-
-        <a href="{% url 'boards:create-board' %}" class="p-2 bg-blue-300 rounded-md hover:bg-blue-400">추가</a>
+        <div class="w-full flex justify-between">
+            <a href="{% url 'boards:create-board' %}" class="p-2 bg-blue-300 rounded-md hover:bg-blue-400">추가</a>
+            <form action="{% url 'boards:board-list' %}">
+                <select name="tag">
+                    <option value="">전체</option>
+                    {% for board in boards %}
+                        <option value="{{board.tag}}">{{board.tag}}</option>
+                    {% endfor %}
+                </select>
+                <select name="complete_yn">
+                    <option value="">전체</option>
+                    <option value="1">완료</option>
+                    <option value="0">미완료</option>
+                </select>
+                <input name="content" type="text">
+                <button class="p-2 bg-blue-300 rounded-md hover:bg-blue-400">제출</button>
+            </form>
+        </div>
 
         <div class="w-full shadow border-gray-200 sm:rounded-lg">
                 <table class="min-w-full divide-y divide-gray-200">          
