Feat: 메인화면 태그 삭제

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,5 +16,6 @@
     <script src="{% static 'js/editTag.js' %}" ></script>    
     <script src="{% static 'js/editContent.js' %}" ></script>         
     <script src="{% static 'js/toggle.js' %}" ></script>    
+    <script src="{% static 'js/deleteTag.js' %}" ></script>    
 </body>
 </html>
