--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -66,16 +66,20 @@
                                    <i class="fas fa-check opacity-30 hover:cursor-pointer" onclick="unCheckToggleHandler({{board.pk}})"></i> 
                                    {% endif %} 
                                 </td>                                                                                                                                                      
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 flex">                                    
-                                    <input id="{{board.pk}}-tag" type="text" value="{{ board.tag }}" disabled class="border-0" />
-                                    <div class="">
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 flex justify-between"> 
+                                    <input id="{{board.pk}}-tag" type="text" value="{{ board.tag }}" disabled class="border-0 rounded-lg" style="background-color: {{board.tag_color}};" />
+                                    <div class="flex justify-center items-center">
                                         <i id="{{board.pk}}-tag-icon" class="fas fa-edit text-blue-500 hover:cursor-pointer" onclick="editTag({{board.pk}})" ></i>
                                         {% if board.tag %}
                                             <i id="{{board.pk}}-tag-delete" class="fas fa-times text-red-500 hover:cursor-pointer px-1" onclick="deleteTag({{board.pk}})" ></i>
+                                        {% else %}
+                                            <i class="fas fa-times text-white px-1"></i>
                                         {% endif %} 
                                     </div>
-                                    <button id="{{board.pk}}-tag-btn" class="p-2 bg-blue-300 rounded-md hidden">수정</button>                                   
-                                    <button id="{{board.pk}}-tag-cancel" class="p-2 bg-red-300 rounded-md hidden">취소</button>                                   
+                                    <div>
+                                        <button id="{{board.pk}}-tag-btn" class="p-2 bg-blue-300 rounded-md hidden">수정</button>                                   
+                                        <button id="{{board.pk}}-tag-cancel" class="p-2 bg-red-300 rounded-md hidden">취소</button>                                   
+                                    </div>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 relative">                                    
                                     <span class="inline-block w-full">{{ board.get_content }}</span>
@@ -113,13 +117,7 @@
                     </tbody>
                 </table>
         </div>
-            
-        
-
-        
         {% include 'pagination.html' with list=boards %}
-        
-  
     </div>
 </div>
 
