Feat: 메인화면 태그 수정시 색상 선택

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,5 +17,6 @@
     <script src="{% static 'js/editContent.js' %}" ></script>         
     <script src="{% static 'js/toggle.js' %}" ></script>    
     <script src="{% static 'js/deleteTag.js' %}" ></script>    
+    <script src="{% static 'js/tagChoice.js' %}" ></script>    
 </body>
 </html>
