--- a/templates/board/board_carete.html
+++ b/templates/board/board_carete.html
@@ -33,23 +33,23 @@
             </div>
         </form>
 
-        <div class="flex flex-col gap-1 ml-5">
+        <div class="flex flex-col gap-1 ml-5 w-64">
             <span>태그 선택</span>
             <div class="h-96 overflow-y-scroll flex flex-col gap-1 relative">
                 {% for name,color in tags %}
                         <div class="">
-                            <div class="flex justify-between  absolute right-1">
+                            <div class="flex justify-between  absolute right-0">
                                 <div></div>
                                 <div class="">
                                     <i class="fas fa-edit text-blue-500 cursor-pointer"></i>
-                                    <i class="fas fa-times text-red-500 cursor-pointer"></i>
+                                    <i class="fas fa-times text-red-500 cursor-pointer" onclick="tagDeleteInCreatePage('{{name}}')"></i>
                                 </div>
                             </div>
                         </div>
                         <input id="hidden-{{name}}" type="hidden" value="{{color}}">
-                        <span id="{{name}}" class="w-10/12 rounded-md p-1 cursor-pointer" style="background-color: {{color}};" onclick="tagChoice(this.id)" >{{name}}</span>
+                        <span id="span-{{name}}" class="w-10/12 rounded-md p-1 cursor-pointer" style="background-color: {{color}};" onclick="tagChoice(this.id)" >{{name}}</span>
                         <div class="hidden">
-                            <input id="{{name}}" class="mx-1" value="{{name}}">
+                            <input id="input-{{name}}" class="mx-1" value="{{name}}">
                             <button class="p-1 bg-blue-300 rounded-md">수정</button>
                             <button class="p-1 bg-red-300 rounded-md">취소</button>
                         </div>
